# DOSSIER

./: LICENSE  README.md  pyproject.toml
configs/: superconductivity.yaml
docs/: data.md  extraction.md  retrieval.md
src/qsph/: __init__.py
src/qsph/agents/: llm_generator.py  loop.py
src/qsph/critic/: hypothesis.py  physics_critic.py
src/qsph/data/: loaders.py
src/qsph/evaluate/: __init__.py  enrichment.py
src/qsph/features/: dos_features.py
src/qsph/retrieval/: chunking.py  embedders.py  evidence_generator.py  ingestion.py  quality.py  retriever.py  tiered_extractor.py
tests/: test_dos_features.py  test_enrichment.py  test_ingestion.py  test_integration.py  test_llm_generator.py  test_loop.py  test_physics_critic.py  test_quality.py  test_rag_integration.py  test_retrieval.py  test_tiered_extractor.py
